# CDD-ModuloV-Proyecto

./: Accidentes_CDMX.ipynb  Accidentes_CDMX.py  Accidentes_CDMX01.py  Accidentes_CDMX2.py  Accidentes_CDMX3.py  README.md  borrador.py  check_models.py  funciona.py  main.py  main2-gpt.py  main2.py  main3.py  main5.0.py  main6.py  mainPep.py  modelo_xgb.pkl  modelo_xgb_full.pkl  prompts OG.py  prompts.py  pyproject.toml
.devcontainer/: devcontainer.json
